--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
     padding: 2px;
   }
   
-  body{
-    background-color: darkgray;
-  }
-  
   a{
     text-decoration: none;
   }
@@ -83,6 +79,7 @@
   
   body {
     font-family:  Arial, Helvetica, sans-serif;
+    background-color: gray;
   }
   
   .mycopy{
