--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@
   
   body {
     font-family:  Arial, Helvetica, sans-serif;
-    background-color: gray;
+    background-color: rgb(11, 34, 77);
   }
   
   .mycopy{
