--- a/styles.css
+++ b/styles.css
@@ -76,14 +76,14 @@
   
   .body-ind{
     /* background-image: url("images/pexels-luis-gomes-546819.jpg");  */
-    background-image: url("images/michael-dziedzic-qDG7XKJLKbs-unsplash.jpg");
+/*     background-image: url("images/michael-dziedzic-qDG7XKJLKbs-unsplash.jpg"); */
   } 
   
   
   
   
   .myabout{
-    background-image: url("images/altumcode-dC6Pb2JdAqs-unsplash.jpg");
+/*     background-image: url("images/altumcode-dC6Pb2JdAqs-unsplash.jpg"); */
     color: bisque;
     font-size: 1.2rem;
   }
@@ -93,16 +93,16 @@
   }
   
   .skills-bg{
-    background-image: url("images/arif-riyanto-1DRq1ZsE2N0-unsplash.jpg");
+/*     background-image: url("images/arif-riyanto-1DRq1ZsE2N0-unsplash.jpg"); */
     color: blanchedalmond;
     font-size: 1.2rem;
   }
   
   .first-bg{
-    background-image: url("images/altumcode-mCj7UinqOYQ-unsplash.jpg");
+/*     background-image: url("images/altumcode-mCj7UinqOYQ-unsplash.jpg"); */
   }
   .second-bg{
-    background-image: url("images/pexels-mikhail-fesenko-9553905.jpg");
+/*     background-image: url("images/pexels-mikhail-fesenko-9553905.jpg"); */
   }
   
   .first-bg, .second-bg{
@@ -127,7 +127,8 @@
   
   body {
     font-family:  Arial, Helvetica, sans-serif;
-    background-color: rgba(11, 34, 77, 0.801) ! important;
+/*     background-color: rgba(11, 34, 77, 0.801) ! important; */
+    background: linear-gradienet(360deg, black, beige, white, green, blue) no-repeat;
   }
   
   .mycopy{
