--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -63,7 +69,9 @@
 
 body{
   background: linear-gradient(360deg, black, beige, white, green, blue) no-repeat;
+  font-family:  Arial, Helvetica, sans-serif;
 }
+
   
 /*   .body-content{
     margin-left: 2rem;
@@ -128,12 +136,6 @@ body{
   #myfooter{
     margin-top: 1rem;
   }
-  
- /* body {
-    font-family:  Arial, Helvetica, sans-serif;*/
-/*     background-color: rgba(11, 34, 77, 0.801) ! important; */
-    /*background: linear-gradienet(360deg, black, beige, white, green, blue) no-repeat;
-  }*/
   
   /*.mycopy{
     font-style: italic;
