--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@
   }
 
 body{
-  background: linear-gradient(360deg, black, beige, white, green, blue) no-repeat;
+  background: linear-gradient(45deg, black, beige, green, blue) no-repeat;
   font-family:  Arial, Helvetica, sans-serif;
 }
 
