--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,11 @@ body{
   font-family:  Arial, Helvetica, sans-serif;
 }
 
+.data-port-content{
+  width: 100%;
+  height: 100%;
+  min-width: 500px;
+}
   
 /*   .body-content{
     margin-left: 2rem;
