--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body{
   
   .mydiv{
     padding: 2px;
-  }
+  }*/
   
   #name {
     font-stretch: ultra-expanded;
@@ -165,12 +165,12 @@ body{
     text-shadow: 5px 5px 2px rgba(186, 184, 108, .4);
     font-family: cursive, "Courier New", Courier, monospace;
   }
-  
+  /*
   .restind{
     color: beige;
     font-size: 1.2rem;
   }
-  
+  */
   .myname, #name{
     text-transform: capitalize;
   }
