--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  position: fixed;
+  top: 0;
 }
 
 /* Style the links inside the navigation bar */
@@ -76,6 +78,7 @@ body{
   width: 100%;
   height: 100%;
   min-height: 500px;
+  margin-top: 60px;
 }
   
 /*   .body-content{
