--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
- *{
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
- }
+}
 
 .topnav {
   background-color: #333;
@@ -85,11 +85,11 @@ body{
 /*   .body-content{
     margin-left: 2rem;
   }
-  
-  #entry{
-    font-size: 19px;
-  }
-  
+*/  
+#entry{
+  font-size: 19px;
+}
+/*  
   .innerind{
     color: blue;
     
