--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body{
 .data-port-content{
   width: 100%;
   height: 100%;
-  min-height: 980px;
+  min-height: 740px;
   margin-top: 60px;
 }
   
@@ -112,17 +112,10 @@ body{
   font-size: 1.2rem;
 }
   
-  /*.first-bg{ */
-/*     background-image: url("images/altumcode-mCj7UinqOYQ-unsplash.jpg"); */
-/*   } */
-/*   .second-bg{ */
-/*     background-image: url("images/pexels-mikhail-fesenko-9553905.jpg"); */
-/*   } */
-  
-/*   .first-bg, .second-bg{ */
-/*     color: azure; */
-/*     font-size: 2rem;
-  } */
+.first-bg, .second-bg{ 
+  color: azure; */
+  font-size: 2rem;
+}
   
 .body-ind, .myabout, .skills-bg, .first-bg, .second-bg{
   background-size: cover;
@@ -130,29 +123,29 @@ body{
   background-repeat: no-repeat;
   padding: 2rem;
 }
-/*  
-  .myproject-a{
-    color: rgb(0,0,255);
-  }
-   */
+ 
+.myproject-a{
+  color: rgb(0,0,255);
+}
+   
 #myfooter{
   margin-top: 1rem;
 }
   
-  /*.mycopy{
-    font-style: italic;
-    color: whitesmoke;
-    font-size: 13px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  }
+.mycopy{
+  font-style: italic;
+  color: whitesmoke;
+  font-size: 13px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
   
-  .lower{
-    padding-top: 4px;
-  }
+.lower{
+  padding-top: 4px;
+}
   
-  .mydiv{
-    padding: 2px;
-  }*/
+.mydiv{
+  padding: 2px;
+}
   
 #name {
   font-stretch: ultra-expanded;
