--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ a:hover{
 }
 
 body{
-  background: linear-gradient(45deg, black, beige, green, blue) no-repeat;
+  background: linear-gradient(45deg, black, purple, green, blue) no-repeat;
   font-family:  Arial, Helvetica, sans-serif;
 }
 
