--- a/css/styles.css
+++ b/css/styles.css
@@ -204,3 +204,18 @@ img {
   width: 100%;
   display: flex;
 }
+
+#table-skills{
+  width: 100%;
+  display: flex;
+}
+.project-outer-container{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 80%;
+  border-radius: 5px;
+}
+
+.project-data{
+  visibility: hidden;
+}
